fixed light/dark mode

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -21,8 +21,11 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    color-scheme: light dark;
+    --background: #ffffff;
+    --foreground: #171717;
+    /* --background: #0a0a0a;
+    --foreground: #ededed; */
   }
 }
 
